@@ -1,56 +1,41 @@
-#########
-# Author:        gq1
-# Created:       2010-05-05
-#
-
 package npg_tracking::illumina::run::folder::validation;
 
 use Moose;
 use Carp;
-use English qw{-no_match_vars};
-use npg::api::run;
+use Try::Tiny;
 
-with qw{npg_tracking::illumina::run::short_info};
+use npg_tracking::Schema;
+
+with qw{
+  npg_tracking::illumina::run::short_info
+  npg_tracking::illumina::run
+};
 
 our $VERSION = '0';
 
-has 'no_npg_check'=>  ( isa            => q{Bool},
-                         is            => q{rw},
-                         documentation => q{option to stop checking run_folder from npg},
-                         default       => 0,
-                       );
-
-has 'npg_api_run' =>  ( isa => q{npg::api::run},
-                        is => q{rw},
-                        lazy_build => 1,
-                        documentation => 'npg api run object',
-                       );
-
-sub _build_npg_api_run {
-  my $self = shift;
-  return npg::api::run->new({id_run => $self->id_run,});
+has npg_tracking_schema => (
+  is         => 'ro',
+  isa        => 'npg_tracking::Schema',
+  lazy_build => 1,
+);
+sub _build_npg_tracking_schema {
+  my ($self) = @_;
+  return npg_tracking::Schema->connect();
 }
 
 sub check{
   my $self = shift;
-
   my $run_folder = $self->run_folder();
-  if($self->no_npg_check){
-    carp "Run folder $run_folder will not be checked by NPG";
-    return 1;
-  }
-
   my $run_folder_npg;
-  eval{
-    $run_folder_npg = $self->npg_api_run->run_folder();
-    1;
-  } or do {
-    carp $EVAL_ERROR;
-    return;
+  try {
+    $run_folder_npg = $self->tracking_run()->folder_name();
+  } catch {
+    carp $_;
   };
 
+  $run_folder_npg ||= q[];
   if(! ($run_folder eq $run_folder_npg )){
-    carp "Run folder $run_folder does not match $run_folder_npg from NPG";
+    carp "Run folder '$run_folder' does not match '$run_folder_npg' from NPG";
     return;
   }
 
@@ -71,12 +56,11 @@ npg_tracking::illumina::run::folder::validation
 =head1 SYNOPSIS
 
 $validation = npg_tracking::illumina::run::folder::validation->new( run_folder => $run_folder, );
-$validation = npg_tracking::illumina::run::folder::validation->new( run_folder => $run_folder, no_npg_check => 1,);
 $validation->check();
 
 =head1 DESCRIPTION
 
-Given a run_folder, and get the final digits of it to be the id_run, check this is genuine or not in NPG
+Given a run_folder, check this is genuine or not against the tracking database
 
 =head1 SUBROUTINES/METHODS
 
@@ -94,9 +78,7 @@ Given a run_folder, and get the final digits of it to be the id_run, check this 
 
 =item Carp
 
-=item English -no_match_vars
-
-=item npg_tracking::illumina::run::folder::validation
+=item Try::Tiny
 
 =back
 
@@ -110,7 +92,7 @@ Guoying Qi
 
 =head1 LICENSE AND COPYRIGHT
 
-Copyright (C) 2010 GRL, by Guoying Qi
+Copyright (C) 2015 GRL, by Guoying Qi
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
